<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.androidbootcamp.vetcalc.ERABCsActivity">

    <Spinner
        android:id="@+id/flowSelect"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/whitegradnav_1"
        android:entries="@array/flow"
        android:padding="20sp"
        android:spinnerMode="dialog"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/erContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/abcJumper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic_abc" />

            <TextView
                android:id="@+id/patientData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/emergencyHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergencyHeader"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/airway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/airway"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breathe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/breathing"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/circul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/circulation"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/advHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/advSupportHead"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/adv1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/adv2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/adv3"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ff8e8e"
                    android:gravity="center_horizontal"
                    android:padding="10dip">

                    <TextView
                        android:id="@+id/speciesLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dip"
                        android:paddingLeft="20dip"
                        android:paddingRight="20dip"
                        android:paddingTop="10dip"
                        android:text="Species"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/condLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dip"
                        android:paddingLeft="20dip"
                        android:paddingRight="20dip"
                        android:paddingTop="10dip"
                        android:text="Conditon"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/fluidRtLbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dip"
                        android:paddingLeft="20dip"
                        android:paddingRight="20dip"
                        android:paddingTop="10dip"
                        android:text="Fluid Rate"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black" />


                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dip">

                    <TextView
                        android:id="@+id/speciesVal1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="Species"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/condVal1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="Conditon"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/fluidRtVal1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="Fluid Rate"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black" />


                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dip">

                    <TextView
                        android:id="@+id/speciesVal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="Species"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/condVal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="Conditon"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/fluidRtVal2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dip"
                        android:text="Fluid Rate"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black" />


                </TableRow>


            </TableLayout>

            <TextView
                android:id="@+id/alsClosing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/closingAdv" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
