<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.vetcalc.ERMedsActivity">

    <Spinner
        android:id="@+id/navSpinnerER"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="6dp"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/flow"
        android:spinnerMode="dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/medSelectHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/medSpinnerHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navSpinnerER"
        android:layout_marginStart="32dp" />

    <Spinner
        android:id="@+id/medSelector"
        android:background="@android:drawable/btn_dropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medSelectHint"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TableLayout
        android:id="@+id/headerTable"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medSelector">

        <TableRow
            android:id="@+id/erMedHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#29005c"
            android:paddingBottom="10dp"
            android:paddingTop="10sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/medName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:paddingRight="15sp"
                android:shadowColor="#000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius=".5"
                android:text="@string/medication_nameVal"
                android:textColor="#ffffff"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="107dp" />

        </TableRow>

    </TableLayout>

    <Spinner
        android:id="@+id/doseSpinner"
        android:background="@android:drawable/btn_dropdown"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"

        android:dropDownSelector="@android:drawable/ic_lock_lock"
        android:elevation="6dp"
        android:gravity="right"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medDoseHeader" />

    <TextView
        android:id="@+id/medDoseHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12sp"
        android:text="@string/dosage_range_mg_kg"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="335dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/medDetails"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <TableRow
        android:id="@+id/medDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#bfc3b7ff"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTable"
        app:layout_constraintVertical_bias="0.031">

        <TextView
            android:id="@+id/medConcHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10sp"
            android:text="@string/concentrationLabel" />

        <TextView
            android:id="@+id/medConc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:paddingLeft="12sp"
            android:text="@string/concentrationVal"
            android:textColor="@android:color/black" />

    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doseSpinner">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BFE7D6"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/dosageHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="Calculated Dosage:"
                android:textColor="#000"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dosageSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="No Dosage Selected"
                android:textColor="#000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dosageDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="TextView"
                android:textColor="#000" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
